# swiftcopy1

./: README.md  metadata.json  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/engine/: iocp.rs  metadata.rs  mod.rs  vss.rs
src/components/: SwiftCopyDashboard.test.tsx  SwiftCopyDashboard.tsx
src/hooks/: useIpcEngine.ts  useSimulation.test.ts  useSimulation.ts
src/lib/: utils.test.ts  utils.ts
src/tests/: setup.ts
src/tests/fixtures/: tasks.ts
